--- a/style.css
+++ b/style.css
@@ -48,6 +48,12 @@ ul {
     padding-left: 0;
 }
 
+button {
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
 /* Typography */
 
 h1 {
@@ -77,7 +83,6 @@ p {
     color: var(--color-black);
     margin: 4px 0;
 }
-
 
 
 .icon {
@@ -124,4 +129,33 @@ p {
 .navbar__menu__item:hover {
     background-color: var(--color-dark-blue);
     border-radius: var(--size-border-radius);
+}
+
+/* Home */
+#home {
+    background: url("imgs/home-background.png") center/cover no-repeat;
+    padding: 40px;
+    text-align: center;
+}
+
+.home__avatar {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    border: 2px solid var(--color-light-white);
+}
+
+.home__title,
+.home__description {
+    color: var(--color-white)
+}
+
+.home__contact {
+    font-size: var(--font-regular);
+    font-weight: var(--weight-semi-bold);
+    margin: 24px;
+    padding: 8px 12px;
+    border: 2px solid var(--color-white);
+    border-radius: 4px;
+    color: var(--color-white)
 }
