--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ button {
     cursor: pointer;
     border: none;
     outline: none;
+    padding: 0px;
 }
 /* Typography */
 
@@ -101,12 +102,21 @@ p {
 
 /* Navbar */
 #navbar {
+    position: fixed;
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    background-color: var(--color-blue);
+    background-color: transparent;
     align-items: center;
     color: var(--color-white);
     padding: 8px 16px;
+    transition: all var(--animation-duration) ease;
+    z-index: 1;
+}
+
+#navbar.navbar--dark {
+    background-color: var(--color-blue);
+    padding: 8px;
 }
 
 .navbar__menu {
@@ -137,10 +147,20 @@ p {
     border-radius: var(--size-border-radius);
 }
 
+.navbar__toggle-btn {
+    position: absolute;
+    top: 20px;
+    right: 32px;
+    font-size: 24px;
+    color: var(--color-white);
+    display: none;
+}
+
 /* Home */
 #home {
     background: url("imgs/home-background.png") center/cover no-repeat;
     padding: 40px;
+    padding-top: 120px;
     text-align: center;
 }
 
@@ -459,4 +479,43 @@ p {
 .contact__links i:hover {
     transform: scale(1.1);
     color: var(--color-yellow)
+}
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+    .navbar__toggle-btn {
+        display: block;
+    }
+
+    #navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .navbar__menu {
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+
+    .about__majors {
+        flex-direction: column;
+    }
+
+    .major {
+        margin-bottom: 38px;
+    }
+
+    .skillset {
+        flex-direction: column;
+    }
+
+    .project {
+        flex-grow: 1;
+    }
+
+    .testimonial__avatar {
+        width: 80px;
+        height: 80px;
+    }
 }
