--- a/style.css
+++ b/style.css
@@ -481,6 +481,27 @@ p {
     color: var(--color-yellow)
 }
 
+/* Arrow up */
+.arrow-up {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 60px;
+    height: 60px;
+    font-size: 40px;
+    color: var(--color-white);
+    border-radius: 50%;
+    background-color: var(--color-dark-blue);
+    opacity: 0;
+    pointer-events: none;
+    transition: all, var(--animation-duration), ease-in;
+}
+
+.arrow-up.visible {
+    opacity: 1;
+    pointer-events: auto;
+}
+
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
     .navbar__toggle-btn {
