--- a/style.css
+++ b/style.css
@@ -367,6 +367,13 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    opacity: 1;
+    transition: all var(--animation-duration) ease-out;
+}
+
+.work__projects.animate-out {
+    opacity: 0;
+    transform: scale(0.96) translateY(40px);
 }
 
 .project {
@@ -379,6 +386,9 @@ p {
     margin: 4px;
 }
 
+.project.invisible {
+    display: none;
+}
 .project__img {
     max-width: 100%;
     max-height: 100%;
