--- a/style.css
+++ b/style.css
@@ -597,6 +597,25 @@ p {
     to {opacity: 1}
   }
 
+/* iframe */
+.iframebox {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    margin-bottom: 20px;
+   }
+   
+   .iframebox iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+   
+   }​
+   
+   
+   
+   출처: https://kiss7.tistory.com/1009 [키스세븐]
+
 /* Testimonial */
 
 #testimonials {
