--- a/style.css
+++ b/style.css
@@ -432,6 +432,7 @@ p {
 }
 
 /* project modal */
+
 .modal {
     display: none;
     position: fixed;
@@ -444,7 +445,6 @@ p {
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
 }
-
 
 .modal__header {
     padding: 16px;
@@ -490,15 +490,29 @@ p {
     padding: 0;
     border: 1px solid #888;
     width: 80%;
-    max-width: 800px;
+    max-width: 600px;
+    max-height: 800px;
+    overflow-y: scroll;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    /* opacity: 0;
-    transition: all var(--animation-duration) ease-in-out; */
+    animation-name: animateModal;
+    animation-duration: 400ms;
 }
 
-/* .modal.modal-open .modal__content {
-    opacity: 1;
-} */
+/* Add Animation */
+
+@keyframes animateModal {
+    from {
+        opacity: 0
+    }
+    to {
+        opacity: 1
+    }
+}
+
+.modal__footer {
+    padding: 8px 16px;
+    background-color: var(--color-blue);
+}
 
 .close {
     color: #aaa;
@@ -514,21 +528,25 @@ p {
 }
 
 /* carousel */
+
 /* Slideshow container */
+
 .slideshow-container {
     max-width: 1000px;
     position: relative;
     margin: auto;
-  }
-  
-  /* Hide the images by default */
-  .falling-slide, .hrv-slide {
+}
+
+/* Hide the images by default */
+
+.falling-slide, .hrv-slide {
     display: none;
     text-align: center;
-  }
-  
-  /* Next & previous buttons */
-  .prev, .next {
+}
+
+/* Next & previous buttons */
+
+.prev, .next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -542,29 +560,33 @@ p {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
+}
+
+/* Position the "next button" to the right */
+
+.next {
     right: 0;
     border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
+}
+
+/* On hover, add a black background color with a little bit see-through */
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+
+.numbertext {
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
+}
+
+/* The dots/bullets/indicators */
+
+.dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -573,49 +595,55 @@ p {
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-  }
-  
-  .dot.active, .dot:hover {
+}
+
+.dot.active, .dot:hover {
     background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
+}
+
+/* Fading animation */
+
+.fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
-  }
-  
-  @-webkit-keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-  }
-  
-  @keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-  }
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
 
 /* iframe */
+
 .iframebox {
     position: relative;
     width: 100%;
     padding-bottom: 56.25%;
     margin-bottom: 20px;
-   }
-   
-   .iframebox iframe {
+}
+
+.iframebox iframe {
     position: absolute;
     width: 100%;
     height: 100%;
-   
-   }​
-   
-   
-   
-   출처: https://kiss7.tistory.com/1009 [키스세븐]
+}
 
+​
 /* Testimonial */
 
 #testimonials {
@@ -709,71 +737,57 @@ p {
         --font-small: 14px;
         --font-micro: 12px;
     }
-
     .navbar__toggle-btn {
         display: block;
         top: 16px;
         right: 16px;
     }
-
     #navbar {
         flex-direction: column;
         align-items: flex-start;
         background-color: var(--color-blue);
     }
-
     .navbar__menu.open {
         display: block;
     }
-
     .section {
         padding: 16px;
         padding-top: 40px;
     }
-
     .navbar__menu {
         flex-direction: column;
         text-align: center;
         width: 100%;
         display: none;
     }
-
     .work__categories {
         margin: 20px;
     }
-
     .about__majors {
         flex-direction: column;
         margin-top: 30px;
         margin-bottom: 0px;
     }
-
     .major {
         margin-bottom: 30px;
     }
-
     .skillset {
         flex-direction: column;
     }
-
     .category__btn {
         margin: 4px 0;
     }
-
     .project {
         flex-grow: 1;
     }
-
     .modal__content {
         max-height: 500px;
-        overflow-y:scroll;
+        overflow-y: scroll;
     }
-
     .testimonial__avatar {
         width: 80px;
         height: 80px;
     }
-    
     .arrow-up {
         width: 50px;
         height: 50px;
